# prime_worker

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap.sh  cloudbuild.yaml  debug.Dockerfile  input.schema.json  logs  test.Dockerfile
.github/workflows/: rust_test.yml
LoadTesting/: simple_test.js
LoadTesting.Test/: simple_test.js
api/: Cargo.toml
api/src/: main.rs
kubernetes/: autoscaler.yaml  deploy.yaml  deployment-big.yaml  deployment-small.yaml  deployment.yaml  horizontalpodautoscaler.yaml  http2-service.yaml  ingress.yaml  long-configMap.yaml  mci.yaml  mcs.yaml  service.yaml  short-configMap.yaml
prime_check/: Cargo.toml
prime_check/src/: lib.rs
src/: controller.rs  database.rs  entities.rs  main.rs  services.rs  statics.rs  test.rs
