[package]
name = "api"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
rug = "1"
tokio = { version = "1.17", features = ["full"] }
rayon = "1.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
num_cpus = "1"
env_logger = "0.9"
futures = "0.3"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.1"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
incremental = false
debug = 0
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev]
opt-level = 1
incremental = true
debug = true
