[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.15.0", features = ["full"]}
serde = "^1.0.133"
serde_json = "^1.0.75"
lambda_runtime = "^0.4.1"
prime_check = { path = "../prime_check" }
rug = "1.14.0"
